background color was change

--- a/index.html
+++ b/index.html
@@ -9,24 +9,24 @@
     <script src="index.js" defer></script>
     <title>Document</title>
 </head>
-<body>
+<body class="bg-dark">
     <div class="container text-center">
-        <h1>Countdown before <strong class="text-danger" id="currentYear">2022</strong> ends:</h1>
+        <h1 class="text-white">COUNTDOWN BEFORE <strong class="text-danger" id="currentYear">2022</strong> ENDS:</h1>
 
         <div class="row mt-5 justify-content-center">
-            <div class="col-2 pt-3 bg-dark text-white mx-2 rounded">
+            <div class="col-2 pt-3 bg-dark bg-white text-dark mx-2 rounded">
                 <h2><span id="remainingDays">00</span></h2>
                 <p>DAYS</p>
             </div>
-            <div class="col-2 pt-3 bg-dark text-white mx-2 rounded">
+            <div class="col-2 pt-3 bg-dark bg-white text-dark mx-2 rounded">
                 <h2><span id="remainingHours">00</span></h2>
                 <p>HOURS</p>
             </div>
-            <div class="col-2 pt-3 bg-dark text-white mx-2 rounded">
+            <div class="col-2 pt-3 bg-dark bg-white text-dark mx-2 rounded">
                 <h2><span id="remainingMinutes">00</span></h2>
                 <p>MINS</p>
             </div>
-            <div class="col-2 pt-3 bg-dark text-white mx-2 rounded">
+            <div class="col-2 pt-3 bg-dark bg-white text-dark mx-2 rounded">
                 <h2><span id="remainingSecs">00</span></h2>
                 <p>SECS</p>
             </div>
